# TerraServe

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  docker-compose.yml  oracle.sh  score.sh
.github/workflows/: publish-image.yml  publish-wheels.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/terraserve/: __init__.py  _crs.py  pygeoapi.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_crs.py
docs/: mvt-followups.md  vector-serving-audit-2026-07-13.md
examples/: simd_bench.rs
fixtures/: layers.example.yaml  manifest.json
fixtures/cite/: cite-fixture.vec.json  run-wms11.sh  run-wms13.sh  wms11-layers.yaml  wms13-layers.yaml
fixtures/cite/data/: BasicPolygons.geojson  Bridges.geojson  Buildings.geojson  DividedRoutes.geojson  Forests.geojson  Lakes.geojson  MapNeatline.geojson  NamedPlaces.geojson  Ponds.geojson  RoadSegments.geojson  Streams.geojson
fixtures/fgb/: hole.fgb  hole.geojson  lines.fgb  lines.geojson  multi.yaml  tiny.fgb  tiny.geojson
fixtures/fonts/: LICENSE.txt
fixtures/goldens/: mini_wmq_z0.pbf
fixtures/gpkg/: mini.gpkg
fixtures/sld/: airports.sld
fixtures/styles/: airports.vec.json  airports_nolabel.vec.json  cos2018.mvt-style.json  cos2018.sld  cos2023.mvt-style.json  cos2023.sld  countries.vec.json  dem.json  grayscale.json  ndvi.json  pseudocolor.json  rgb.json  roads.vec.json  vida.mvt-style.json  vida.sld
fixtures/vector/: airports.geojson  countries.geojson  mini_mvt.geojson  roads.geojson
src/: backend.rs  cache.rs  cog.rs  config.rs  decode.rs  expr.rs  legend.rs  lib.rs  main.rs  mvt_http.rs  pngio.rs  render.rs  reproj.rs  s3.rs  server.rs  style.rs  tms.rs  tms_http.rs  wms.rs  wmts.rs  xray.html
src/sld/: filter.rs  mod.rs  model.rs  parse.rs  xml.rs
src/vector/: draw.rs  feature.rs  geojson.rs  geom.rs  gpkg.rs  index.rs  mod.rs  place.rs  raster.rs  render.rs  shape.rs  sld_lower.rs  source.rs  style.rs  wkb.rs
src/vector/fgb/: feat.rs  header.rs  mod.rs  rtree.rs
src/vector/mvt/: cell.rs  clip.rs  dissolve.rs  geom.rs  mod.rs  opts.rs  simplify.rs  tile.rs  wire.rs
src/vector/pmtiles/: codec.rs  generate.rs  mod.rs  overlay.rs  read.rs  write.rs
src/vector/topology/: cut.rs  dedup.rs  dissolve.rs  join.rs  lod.rs  materialize.rs  mod.rs  snap.rs
tests/: decode_dem.rs  fgb_multi_config.rs  getfeatureinfo.rs  gpkg_source.rs  legend.rs  mvt_clip.rs  mvt_geom.rs  mvt_http.rs  mvt_tile.rs  mvt_wire.rs  oracle_align.rs  oracle_gdal_point.rs  oracle_gdal_warp.rs  pmtiles_e2e.rs  pmtiles_serve.rs  pmtiles_writethrough.rs  render_identity.rs  render_nodata.rs  render_seam.rs  render_tile_independence.rs  rusqlite_smoke.rs  sld_conformance.rs  sld_filter.rs  sld_golden.rs  sld_lower.rs  sld_model.rs  sld_parse.rs  sld_render.rs  tiny_skia_smoke.rs  tms_config.rs  tms_grid.rs  tms_http.rs  tms_render.rs  vector_draw.rs  vector_feature.rs  vector_geojson.rs  vector_geom.rs  vector_gfi.rs  vector_golden.rs  vector_index.rs  (+13 more)
tests/common/: mod.rs
tests/fixtures/sld/: point_min.sld  se11_point_scale_filter.debug.snapshot  se11_point_scale_filter.sld
tools/: pixdiff.py  run_cases.py
